<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".loginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_plantix"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbg"
            android:layout_marginStart="25dp"
            android:inputType="text"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/full_name"
            android:padding="15dp"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbg"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_phone_number"
            android:padding="15dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:layout_marginTop="25dp"
            android:textSize="17sp"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:textColor="#fff"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonbg"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:fontFamily="@font/roboto_thin"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:layout_marginTop="25dp"
            android:textSize="17sp"
            android:id="@+id/already"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#fff"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Sign In"
            android:id="@+id/signin"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:fontFamily="@font/roboto_thin"
            android:textSize="17sp"
            />



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="#fff"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/roboto_thin"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>