<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tac"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="#B5DAB9"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nice_to_see_you_again"
            android:textColor="#B5DAB9"
            android:textSize="25sp"
            />


        <Button
            android:id="@+id/login"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonbg"
            android:fontFamily="sans-serif-medium"
            android:minWidth="80dip"
            android:minHeight="40dip"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp" />


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"

            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/accept"
                android:text="I read and accept the terms of use and the privacy policy"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_thin"
                />

            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/buttonbg"
                android:fontFamily="@font/roboto_light"
                android:text="Accept"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="19sp"
                />


        </RelativeLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
